# foodex2-sca-backend

./: .dockerignore  .gitignore  .replit  Dockerfile  LICENSE  README.md  app.py  azure-pipelines-1.yml  azure-pipelines.yml  config.py  pyproject.toml  requirements-frozen.txt  requirements.txt
api/: __init__.py  private.py  public.py  utils.py
api/asset/data/: stop_words.csv
api/asset/data/unsure_data/: foodex_unsure_data.parquet
api/asset/templates/: example.http
api/data/mtx/: MTX_12.0.xlsx  readme.txt
api/data/templates/: example.http
api/data/unsure_data/: to_provide_examples.tsv
doc/: dependencies.txt  readme.txt  requirements.txt
docker_build/: Dockerfile
dockerfiles/initContainer/: Dockerfile
manifests/: deployment.local.yml  deployment.yml  namespace.yml  service.yml
src/: bt_model.py  code_model.py  data_cleaner.py  fc_model.py  model_creator_1.py  model_creator_2.py  test_bt_model.py  test_facet_model.py  text_cleaner.py
src/data/: MTX_10.3.csv  facet_categories.csv
src/test/: bt_model.py  data_cleaner.py  fc_model.py  test_bt_model.py
src/util/: Complete_FoodEx2Hist.csv  FoodEx2Hist.csv  clean_file.py  facets.csv
