[tool.poetry]
name = "repl_nix_foodex2-sca-backend"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
fuzzywuzzy = "^0.18.0"
nltk = "^3.8.1"
pandas = "^1.5.3"
requests = "^2.28.2"
spacy = "^3.5.0"
azure-devops = "^6.0.0-beta.4"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
